# subscriptions-reminder

./: .env  .env.example  README.md  pyproject.toml
.github/workflows/: daily.yml
src/subscriptions_cli/: cli.py  email_util.py
