[project]
name = "subscriptions-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "ina",email = "ageeab@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "subscriptions_cli", from = "src"}]

[tool.poetry.scripts]
subscriptions = "subscriptions_cli.cli:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
